--- a/5-6-test.html
+++ b/5-6-test.html
@@ -17,3 +17,28 @@ color:#fff;
   <p>Click Me!</p>
 </body>
 </html>
+header{
+    background: #fff;
+    border-top: 50px solid #444;
+    border-bottom:1px solid #A6A6A6;
+    box-shadow:0 3px 10px rgba(0, 0, 0, 0.3);
+}
+header div{
+    width:960px;
+    margin-right:auto;
+    margin-left:auto;
+}
+header h1{
+    padding-top:30px;
+    width:260px;
+    float:left;
+}
+nav{
+    width:640px;
+    float:right;
+}
+header+div:after{
+    display: block;
+    content: "";
+    clear: both;
+  }
